<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard">

    <LinearLayout
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:weightSum="8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/textGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:background="@color/transparant"
                android:text="@string/list"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <GridLayout
            android:id="@+id/mainGrid"
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="15dp"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="55dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="true">

            <!--row 1-->
            <!--colom 1-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/transparant"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImageView"
                        android:layout_width="match_parent"
                        android:layout_height="133dp"
                        app:srcCompat="@drawable/ml" />
                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ml"
                        app:backgroundTint="#254965"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--Row 1 -->
            <!--colom 2-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/transparant"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="109dp"
                        android:layout_height="135dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/pubg"/>
                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/pubg"
                        app:backgroundTint="#254965"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--Row 2-->
            <!--colom 1-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/transparant"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="159dp"
                    android:layout_height="174dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="118dp"
                        android:layout_height="127dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ff" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ff"
                        app:backgroundTint="#254965" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--colom 2-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/transparant"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="141dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/pb" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/pb"
                        app:backgroundTint="#254965" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--row 3-->
            <!--colom 1-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/transparant"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="106dp"
                        android:layout_height="123dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/about"/>

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/about"
                        app:backgroundTint="#254965"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--colom 2-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/transparant"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="117dp"
                        android:layout_height="124dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/exit" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/exit"
                        app:backgroundTint="#254965" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>
</ScrollView>